--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 </head>
 
 <body>
-The content of the document......
+  
+  
+The content of the document Bünyamin Ergen's Page
+  
+  
 </body>
 
 </html>
