"Bunyamin Ergen's Github Page"

--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
     <meta name="msapplication-TileColor" content="#000000">
     <meta name="theme-color" content="#000000">
 
-    <meta name="description"         content="Bunyamin Ergen Jr. Data Scientist">
+    <meta name="description"         content="Bunyamin Ergen  Data Scientist">
     <meta property="og:locale"       content="tr_TR">
     <meta property="og:type"         content="website">
-    <meta property='og:title'        content='Bunyamin Ergen Jr. Data Scientist'>
-    <meta property='og:description'  content="Bunyamin Ergen Jr. Data Scientist">
+    <meta property='og:title'        content='Bunyamin Ergen  Data Scientist'>
+    <meta property='og:description'  content="Bunyamin Ergen  Data Scientist">
     <meta property='og:image'        content='https://bunyaminergen.com/img/about/1.jpg'>
     <meta property='og:url'          content='http://bunyaminergen.com/'>
     <meta property="og:site_name"    content="Bunyamin Ergen ">
     <meta name="twitter:card"        content="summary_large_image">
     <meta name="twitter:site"        content="@bergenoffical">
     <meta name="twitter:creator"     content="@bergenoffical">
-    <meta name='twitter:domain'      content='Bunyamin Ergen Jr. Data Scientist'>
-    <meta name='twitter:title'       content='Bunyamin Ergen Jr. Data Scientist'>
-    <meta name='twitter:description' content="Bunyamin Ergen Jr. Data Scientist">
+    <meta name='twitter:domain'      content='Bunyamin Ergen  Data Scientist'>
+    <meta name='twitter:title'       content='Bunyamin Ergen  Data Scientist'>
+    <meta name='twitter:description' content="Bunyamin Ergen  Data Scientist">
     <meta name='twitter:image:src'   content='https://bunyaminergen.com/img/about/1.jpg'>
 
-    <title>Bunyamin Ergen Jr. Data Scientist</title>
+    <title>Bunyamin Ergen  Data Scientist</title>
 
     <!-- Styles -->
     <style>
@@ -71,7 +71,7 @@ a:active {
         <div class="column">
             <section class="block">
                 <h1>BUNYAMIN ERGEN</h1>
-                <h2>Jr. Data Scientist</h2>
+                <h2> Data Scientist</h2>
                 <p>I changed my career path to Data Science with great enthusiasm by combining the experiences that I gained from previous fields. In business life, I focus on the make use of the time well and solving problems. I can describe myself as someone who always does everything to achieve success in my work with high motivation.</p>
                 <p>text</p>
                 <p>Text <a href="https://github.com/bunyaminergen" target="_blank">Github Page</a>.</p>
@@ -90,12 +90,12 @@ a:active {
             </section>
             <section class="block">
                 <h2>Work experience</h2>
-                <p>1990 — 2023<br>Bunyamin Ergen <br>Jr. Data Scientist</p>
-                <p>1990 — 2023<br>Work experience<br>Jr. Data Scientist</p>
-                <p>1990 — 2023<br>Work experience<br>Jr. Data Scientist</p>
-                <p>1990 — 2023<br>Work experience<br>Jr. Data Scientist</p>
-                <p>1990 — 2023<br>Work experience<br>Jr. Data Scientist</p>
-                <p>1990 — 2023<br>Work experience<br>Jr. Data Scientist</p>
+                <p>1990 — 2023<br>Bunyamin Ergen <br> Data Scientist</p>
+                <p>1990 — 2023<br>Work experience<br> Data Scientist</p>
+                <p>1990 — 2023<br>Work experience<br> Data Scientist</p>
+                <p>1990 — 2023<br>Work experience<br> Data Scientist</p>
+                <p>1990 — 2023<br>Work experience<br> Data Scientist</p>
+                <p>1990 — 2023<br>Work experience<br> Data Scientist</p>
                 <p>—</p>
                 <h2>Education</h2>
                 <p>1990 — 2023<br>Degree</p>
